--- a/client/stylesheets/slider.scss
+++ b/client/stylesheets/slider.scss
@@ -58,8 +58,8 @@ body {
 }
 
 #app {
+  margin-top: 50px;
   overflow: hidden;
-  background: #FFF;
   width: $phoneWidth - 40px;
   height: $phoneHeight - 140px;
   position: absolute;
@@ -198,53 +198,53 @@ body {
 
 $distance: 400px;
 
-@keyframes yes {
-  0% {
-    transform: scale(1) rotateZ(0deg);
-    left: 0;
-  }
-  30% {
-    transform: scale(1.05) rotateZ(0deg);
-    left: 0;
-  }
-  100% {
-    transform: rotateZ(45deg);
-    left: $distance;
-  }
-}
+// @keyframes yes {
+//   0% {
+//     transform: scale(1) rotateZ(0deg);
+//     left: 0;
+//   }
+//   30% {
+//     transform: scale(1.05) rotateZ(0deg);
+//     left: 0;
+//   }
+//   100% {
+//     transform: rotateZ(45deg);
+//     left: $distance;
+//   }
+// }
 
-.animateYes {
-  animation-fill-mode: both;
-  animation: yes 0.6s linear;
-  &:before {
-    transform: rotateZ(-35deg);
-    background: url(http://i.imgur.com/Zkwj970.png) no-repeat center 10px;
-  }
-}
+// .animateYes {
+//   animation-fill-mode: both;
+//   animation: yes 0.6s linear;
+//   &:before {
+//     transform: rotateZ(-35deg);
+//     background: url(http://i.imgur.com/Zkwj970.png) no-repeat center 10px;
+//   }
+// }
 
-@keyframes no {
-  0% {
-    transform: rotateZ(360deg);
-    right: 0;
-  }
-  30% {
-    transform: scale(1.05) rotateZ(360deg);
-    right: 0;
-  }
-  100% {
-    transform: rotateZ(315deg);
-    right: $distance;
-  }
-}
+// @keyframes no {
+//   0% {
+//     transform: rotateZ(360deg);
+//     right: 0;
+//   }
+//   30% {
+//     transform: scale(1.05) rotateZ(360deg);
+//     right: 0;
+//   }
+//   100% {
+//     transform: rotateZ(315deg);
+//     right: $distance;
+//   }
+// }
 
-.animateNo {
-  animation-fill-mode: both;
-  animation: no 0.6s linear;
-  &:before {
-    transform: rotateZ(35deg);
-    background: url(http://i.imgur.com/XqQZ4KR.png) no-repeat center 10px;
-  }
-}
+// .animateNo {
+//   animation-fill-mode: both;
+//   animation: no 0.6s linear;
+//   &:before {
+//     transform: rotateZ(35deg);
+//     background: url(http://i.imgur.com/XqQZ4KR.png) no-repeat center 10px;
+//   }
+// }
 
 #control {
   position: relative;
