--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -2,6 +2,32 @@ body {
   background: white;
 }
 
+.top-padding {
+  margin-top: 50px;
+}
+
+.owl-carousel .item img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.center-button {
+  text-align: center;
+}
+
+.btn {
+  font-size: 25px;
+  margin-top: 20px;
+}
+
+.navbar, .navbar-collapse .collapse, .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
+  background: darkred;
+}
+
+.navbar-brand, .navbar-toggle, .navbar, .navbar-collapse .collapse, .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus, .nav > li a, {
+  color: antiquewhite !important;
+}
 
 @-webkit-keyframes yes {
   0% {
