--- a/client/includes/header.html
+++ b/client/includes/header.html
@@ -16,6 +16,11 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">My dogs</a></li>
+          <li class="pull-right">
+            {{#if currentUser}}
+              {{> loginButtons}}
+            {{/if}}
+          </li>
         </ul>
       </div>
     </div>
