--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -7,6 +7,15 @@ body {
   margin-top: 50px;
 }
 
+#login-dropdown-list{
+  margin-left: -90px;
+}
+
+#login-buttons .login-button:hover, .accounts-dialog .login-button{
+  background: darkred !important;
+  color: antiquewhite !important;
+}
+
 /*----- HOME -----*/
 .navbar, .navbar-collapse .collapse, .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
   background: darkred;
@@ -18,6 +27,26 @@ body {
 
 .person {
   background: white;
+}
+
+.no {
+  left: 38px;
+}
+
+.no .trigger:before {
+    content: "\f00d";
+    font-size: 28px;
+    color: #c33;
+}
+
+.yes {
+  right: 38px;
+}
+
+.yes .trigger:before {
+    content: "\f004";
+    font-size: 22px;
+    color: #3b7;
 }
 
 
