--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -107,13 +107,17 @@ a .info-sign, .info-sign{
 }
 
 .btn a{
-  color: antiquewhite !important;
+  color: white !important;
   text-decoration: none !important;
+  background: #008b00 !important;
 }
 
 .btn {
-  font-size: 25px;
-  margin-top: 20px;
+  font-size: 20px;
+  background: #008b00 !important;
+  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight:200 !important;
+  letter-spacing:1px !important;
 }
 
 
@@ -264,4 +268,111 @@ a .info-sign, .info-sign{
   -moz-animation:    no 1s ; /* Fx 5+ */
   -o-animation:      no 1s ; /* Opera 12+ */
   animation:         no 1s ; /* IE 10+, Fx 29+ */
+}
+
+
+
+/*----- ACCORDION -----*/
+
+.ac-container{
+	max-width: 400px;width:100%;
+	margin: 10px auto 30px auto;
+	text-align: center;
+}
+.ac-container label{
+
+  /*font-family: lato;*/
+  font-weight:200;
+  letter-spacing:1px;
+  background-color: #333333;
+  /*border-bottom: 1px solid #272727;*/
+  /*text-shadow:-1px 1px 0px #000000;*/
+	padding: 5px 25px;
+	position: relative;
+	z-index: 20;
+	display: block;
+	height: 50px;
+	cursor: pointer;
+	color: #ffffff;
+  /*margin-left: 40px;
+  margin-right: 40px;*/
+	line-height: 33px;
+	font-size: 19px;
+	background: #008b8b;
+  /*-moz-border-radius: 30px;
+  -webkit-border-radius: 30px;*/
+  /*border-radius: 30px;*/
+  /*-khtml-border-radius: 30px; */
+
+	/*box-shadow:
+		0px 0px 0px 1px rgba(155,155,155,0.3),
+		1px 0px 0px 0px rgba(255,255,255,0.9) inset,
+		0px 2px 2px rgba(0,0,0,0.1);*/
+}
+.ac-container label:hover{
+	background: #008b8b;
+}
+.ac-container input:checked + label,
+.ac-container input:checked + label:hover{
+	background: #c6e1ec;
+	color: #3d7489;
+
+}
+.ac-container label:hover:after,
+.ac-container input:checked + label:hover:after{
+	content: '';
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	right: 13px;
+	top: 7px;
+	background: transparent url('http://ny.xn--sktselbolaget-jmb.se/wp-content/images2/images/arrow_down.png') no-repeat center center;
+}
+.ac-container input:checked + label:hover:after{
+	background-image: url('http://ny.xn--sktselbolaget-jmb.se/wp-content/images2/arrow_up.png');
+}
+.ac-container input{
+	display: none;
+}
+.ac-container article{
+	background: #4a4848;
+	margin-top: -1px;
+	overflow: hidden;
+	height: 0px;
+	position: relative;
+	z-index: 10;
+	-webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+	-moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+	-o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+	-ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+	transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+  margin-bottom: 5px;
+}
+.ac-container article p{
+	font-family:lato;font-weight:200;letter-spacing:1px;
+
+
+text-shadow:-1px 1px 0px #000000;
+	color: #ffffff;
+	line-height: 23px;
+	font-size: 14px;
+	padding: 20px;
+
+}
+.ac-container input:checked ~ article{
+	-webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+	-moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+	-o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+	-ms-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+	transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+	box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
+}
+.ac-container input:checked ~ article.ac-small{
+	height: 140px;
+}
+.ac-container input:checked ~ article.ac-medium{
+	height: 180px;
+}
+.ac-container input:checked ~ article.ac-large{
+	height: 230px;
 }
