got test drag and drop to work

--- a/client/pages/test.css
+++ b/client/pages/test.css
@@ -5,7 +5,14 @@
     float: left;
     margin: 10px 10px 10px 0;
 }
-#droppable {
+#reject {
+    width: 150px;
+    height: 150px;
+    padding: 0.5em;
+    float: left;
+    margin: 10px;
+}
+#accept {
     width: 150px;
     height: 150px;
     padding: 0.5em;
